增加Camera类，为Geometry增加了rotateTo方法但没有实现

--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.hpp" />
     <ClInclude Include="Geometry.hpp" />
     <ClInclude Include="proj.h" />
     <ClInclude Include="utils.h" />
