--- a/project_test/project/template.vcxproj.filters
+++ b/project_test/project/template.vcxproj.filters
@@ -46,5 +46,8 @@
     <Text Include="vertexShaderSource.txt">
       <Filter>资源文件</Filter>
     </Text>
+    <Text Include="customFragmentShaderSource.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
