实现x-y网格上的通用曲面生成，调试移动光源

--- a/project_test/project/template.vcxproj.filters
+++ b/project_test/project/template.vcxproj.filters
@@ -43,10 +43,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="vertexShader.vs">
+    <Text Include="vertexShader.gvs">
       <Filter>资源文件</Filter>
     </Text>
-    <Text Include="fragmentShader.fs">
+    <Text Include="fragmentShader.gfs">
       <Filter>资源文件</Filter>
     </Text>
   </ItemGroup>
