--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -147,8 +147,8 @@
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="fragmentShader.fs" />
-    <Text Include="vertexShader.vs" />
+    <Text Include="fragmentShader.gfs" />
+    <Text Include="vertexShader.gvs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
