使用几何着色器检查法线

--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -151,6 +151,9 @@
     <Text Include="lightShader.gvs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="nshader.gfs" />
+    <None Include="nshader.ggs" />
+    <None Include="nshader.gvs" />
     <None Include="shader.gfs" />
     <None Include="shader.gvs" />
   </ItemGroup>
