--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="demo.cpp" />
     <ClCompile Include="glad\src\glad.c" />
     <ClCompile Include="interaction.cpp" />
+    <ClCompile Include="Line.cpp" />
     <ClCompile Include="Shader.hpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
@@ -145,6 +146,7 @@
     <ClInclude Include="Camera.hpp" />
     <ClInclude Include="Geometry.hpp" />
     <ClInclude Include="interaction.h" />
+    <ClInclude Include="Line.h" />
     <ClInclude Include="proj.h" />
     <ClInclude Include="Scene.hpp" />
     <ClInclude Include="utils.h" />
