--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -105,7 +105,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)glfw\include;$(ProjectDir)glad\include;$(ProjectDir)glm\include;$(ProjectDir)tinynurbs;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)glfw\include;$(ProjectDir)glad\include;$(ProjectDir)glm\include;$(ProjectDir)imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -138,7 +138,7 @@
     <ClCompile Include="demo.cpp" />
     <ClCompile Include="glad\src\glad.c" />
     <ClCompile Include="interaction.cpp" />
-    <ClCompile Include="Line.cpp" />
+    <ClCompile Include="line.cpp" />
     <ClCompile Include="Shader.hpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
@@ -146,7 +146,7 @@
     <ClInclude Include="Camera.hpp" />
     <ClInclude Include="Geometry.hpp" />
     <ClInclude Include="interaction.h" />
-    <ClInclude Include="Line.h" />
+    <ClInclude Include="line.h" />
     <ClInclude Include="proj.h" />
     <ClInclude Include="Scene.hpp" />
     <ClInclude Include="utils.h" />
