--- a/project_test/project/template.vcxproj.filters
+++ b/project_test/project/template.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="interaction.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Line.cpp">
+    <ClCompile Include="line.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -53,7 +53,7 @@
     <ClInclude Include="interaction.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Line.h">
+    <ClInclude Include="line.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
