继续尝试使用计算着色器，写好了着色器代码，但是不知道如何将生成的顶点数据传入到顶点缓冲区，另外为了生成顶点而在着色器内部使用了循环，开销很大

--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="shader.fcs" />
     <None Include="shader\lightShader.gfs" />
     <None Include="shader\lightShader.gvs" />
     <None Include="shader\nshader.gfs" />
