--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -162,12 +162,11 @@
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shader.fcs" />
     <None Include="shader\lightShader.gfs" />
     <None Include="shader\lightShader.gvs" />
-    <None Include="shader\nshader.gfs" />
-    <None Include="shader\nshader.ggs" />
-    <None Include="shader\nshader.gvs" />
+    <None Include="shader\normVisualize.gfs" />
+    <None Include="shader\normVisualize.ggs" />
+    <None Include="shader\normVisualize.gvs" />
     <None Include="shader\shader.gfs" />
     <None Include="shader\shader.gvs" />
   </ItemGroup>
