对Mesh增加纹理设置setTexture(path)方法，其会将贴图载入纹理缓冲区，并在其中生成均匀采样的纹理坐标，载入顶点缓冲区，但这个操作和draw中的行为高度耦合，后续可能还要优化

--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -157,9 +157,13 @@
     <ClInclude Include="interaction.h" />
     <ClInclude Include="proj.h" />
     <ClInclude Include="Scene.hpp" />
+    <ClInclude Include="stb_image.h" />
     <ClInclude Include="utils.h" />
+    <ClInclude Include="Wheat.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="shader\leaf.gfs" />
+    <None Include="shader\leaf.gvs" />
     <None Include="shader\lightShader.gfs" />
     <None Include="shader\lightShader.gvs" />
     <None Include="shader\line.gfs" />
@@ -172,6 +176,9 @@
     <None Include="shader\nshader.gvs" />
     <None Include="shader\shader.gfs" />
     <None Include="shader\shader.gvs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="texture\leaf.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
