--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -174,6 +174,8 @@
     <None Include="shader\nshader.gfs" />
     <None Include="shader\nshader.ggs" />
     <None Include="shader\nshader.gvs" />
+    <None Include="shader\plane.gfs" />
+    <None Include="shader\plane.gvs" />
     <None Include="shader\shader.gfs" />
     <None Include="shader\shader.gvs" />
   </ItemGroup>
