建立Light类描述平行光，并在Scene中实现深度图的生成和可视化

--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="Geometry.hpp" />
     <ClInclude Include="GUI.hpp" />
     <ClInclude Include="interaction.h" />
+    <ClInclude Include="Light.hpp" />
     <ClInclude Include="proj.h" />
     <ClInclude Include="Scene.hpp" />
     <ClInclude Include="stb_image.h" />
