--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -104,7 +104,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)glfw\include;$(ProjectDir)glad\include;$(ProjectDir)glm\include;$(ProjectDir)imgui;$(opencvDir)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -165,6 +165,8 @@
     <ClInclude Include="proj.h" />
     <ClCompile Include="Scene.hpp" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="stb_image_resize2.h" />
+    <ClInclude Include="stb_image_write.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="Wheat.hpp" />
   </ItemGroup>
