--- a/project_test/project/template.vcxproj.filters
+++ b/project_test/project/template.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="ImGui\header">
       <UniqueIdentifier>{67ca7b26-3dcb-4318-a347-08142be73172}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\image">
+      <UniqueIdentifier>{116b6272-39e2-4713-82f9-3edcbca4710c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="demo.cpp">
@@ -108,7 +111,13 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="stb_image.h">
-      <Filter>头文件</Filter>
+      <Filter>头文件\image</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image_resize2.h">
+      <Filter>头文件\image</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image_write.h">
+      <Filter>头文件\image</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
