--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -168,7 +168,7 @@
     <ClInclude Include="stb_image_resize2.h" />
     <ClInclude Include="stb_image_write.h" />
     <ClInclude Include="utils.h" />
-    <ClInclude Include="Wheat.hpp" />
+    <ClCompile Include="Wheat.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\leaf.gfs" />
