--- a/project_test/project/template.vcxproj.filters
+++ b/project_test/project/template.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="TriangleGetter.hpp">
       <Filter>类</Filter>
     </ClCompile>
+    <ClCompile Include="Wheat.hpp">
+      <Filter>类</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="proj.h">
@@ -105,9 +108,6 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="interaction.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="Wheat.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="stb_image.h">
