通过帧缓冲生成深度图

--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -171,6 +171,8 @@
     <ClCompile Include="Wheat.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="shader\depthmap.gfs" />
+    <None Include="shader\depthmap.gvs" />
     <None Include="shader\leaf.gfs" />
     <None Include="shader\leaf.gvs" />
     <None Include="shader\lightShader.gfs" />
