使用几何着色器记录三角顶点位置到SSBO，然后用计算着色器计算每个面元面积，在CPU端求和输出，但是目前几何着色器有点问题，导致渲染不出来图形

--- a/test/test/test.vcxproj
+++ b/test/test/test.vcxproj
@@ -136,6 +136,7 @@
   <ItemGroup>
     <None Include="shader\cshader.gcs" />
     <None Include="shader\fshader.gfs" />
+    <None Include="shader\gshader.ggs" />
     <None Include="shader\vshader.gvs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
