基本已经在glsl和cpp两边实现了辐射通量的计算，但是目前结果还不对，问题可能出在Scene的computeRadiantFlux()方法中，设置光源的uniform变量存在问题，在renderdoc中观察到的值与预期不符

--- a/project_test/project/template.vcxproj
+++ b/project_test/project/template.vcxproj
@@ -187,6 +187,7 @@
     <None Include="shader\nshader.gvs" />
     <None Include="shader\plane.gfs" />
     <None Include="shader\plane.gvs" />
+    <None Include="shader\radiantFlux.gcs" />
     <None Include="shader\shader.gfs" />
     <None Include="shader\shader.gvs" />
   </ItemGroup>
